# ECE-508-Group-Project-13

./: CMakeLists.txt  README.md  rai_build.yml
CDLP/: eval.cu  template.cu  template.hu
data/: download-graphalytics-data-sets-r2-s.sh  download-graphalytics-data-sets-r2-test.sh  test-lcc-undirected.e
include/: cdlp.hu  helper.hpp  lcc.hu  template.cu
src/: cdlp.cu  eval.cu  lcc.cu  main.cpp  template.hu
